--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 
 # ignore all images/screenshots
 *.png
+.ipynb_checkpoints/Logistic_Regression_with_a_Neural_Network_mindset-checkpoint.ipynb
+.ipynb_checkpoints/Planar_data_classification_with_one_hidden_layer-checkpoint.ipynb
+.ipynb_checkpoints/Python_Basics_with_Numpy-checkpoint.ipynb
