--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 .ipynb_checkpoints/Logistic_Regression_with_a_Neural_Network_mindset-checkpoint.ipynb
 .ipynb_checkpoints/Planar_data_classification_with_one_hidden_layer-checkpoint.ipynb
 .ipynb_checkpoints/Python_Basics_with_Numpy-checkpoint.ipynb
+tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/.ipynb_checkpoints/C1_W1_Assignment-checkpoint.ipynb
+tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/.ipynb_checkpoints/C1_W1_Lab_1_hello_world_nn-checkpoint.ipynb
