--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 .ipynb_checkpoints/Python_Basics_with_Numpy-checkpoint.ipynb
 tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/.ipynb_checkpoints/C1_W1_Assignment-checkpoint.ipynb
 tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/.ipynb_checkpoints/C1_W1_Lab_1_hello_world_nn-checkpoint.ipynb
+tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/Coursera 3XFRQHPMTBJL.pdf
