--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/.ipynb_checkpoints/
 tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/.ipynb_checkpoints/C1_W1_Lab_1_hello_world_nn-checkpoint.ipynb
 tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/Coursera 3XFRQHPMTBJL.pdf
 tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/.ipynb_checkpoints/C1_W4_Lab_2_image_generator_with_validation-checkpoint.ipynb
+tensorflow-developer/TF_Certificate_Candidate_Handbook.pdf
