--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/.ipynb_checkpoints/
 tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/Coursera 3XFRQHPMTBJL.pdf
 tensorflow-developer/C1-Intro-to-TensorFlow-for-AI-ML-and-DL/.ipynb_checkpoints/C1_W4_Lab_2_image_generator_with_validation-checkpoint.ipynb
 tensorflow-developer/TF_Certificate_Candidate_Handbook.pdf
+tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3_W2_Lab_3_imdb_subwords-checkpoint.ipynb
+tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3_W1_Lab_3_sarcasm-checkpoint.ipynb
+tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3W1_Assignment-checkpoint.ipynb
