--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ tensorflow-developer/TF_Certificate_Candidate_Handbook.pdf
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3_W2_Lab_3_imdb_subwords-checkpoint.ipynb
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3_W1_Lab_3_sarcasm-checkpoint.ipynb
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3W1_Assignment-checkpoint.ipynb
+tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3W2_Assignment-checkpoint.ipynb
