--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpo
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3_W1_Lab_3_sarcasm-checkpoint.ipynb
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3W1_Assignment-checkpoint.ipynb
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3W2_Assignment-checkpoint.ipynb
+tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/Coursera DD7A5XF66BXW.pdf
+tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/history.pkl
