--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpo
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpoints/C3W2_Assignment-checkpoint.ipynb
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/Coursera DD7A5XF66BXW.pdf
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/history.pkl
+tensorflow-developer/tf_cheat_sheet.ipynb
