adding C4W3_Assignment.ipynb and version updates

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/.ipynb_checkpo
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/Coursera DD7A5XF66BXW.pdf
 tensorflow-developer/C3-Natural-Language-Processing-in-TensorFlow/history.pkl
 tensorflow-developer/tf_cheat_sheet.ipynb
+tensorflow-developer/C4-Sequences-Time-Series-and-Prediction/.ipynb_checkpoints/C4_W2_Lab_3_deep_NN-checkpoint.ipynb
+tensorflow-developer/C4-Sequences-Time-Series-and-Prediction/.ipynb_checkpoints/C4_W2_Lab_1_features_and_labels-checkpoint.ipynb
+tensorflow-developer/C4-Sequences-Time-Series-and-Prediction/.ipynb_checkpoints/C4W1_Assignment-checkpoint.ipynb
+tensorflow-developer/C4-Sequences-Time-Series-and-Prediction/.ipynb_checkpoints/C4W2_Assignment-checkpoint.ipynb
